updated rolling returns and plotter

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 __pycache__
 .idea
 download
+Data_Preparation_Utilitypy.py
+Contract Months to date format.csv
+Camo.py
+NIFTY_Transformed_Single_File_2010_2019_back_to_back_contract_data.csv
