--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Data_Preparation_Utilitypy.py
 Contract Months to date format.csv
 Camo.py
 NIFTY_Transformed_Single_File_2010_2019_back_to_back_contract_data.csv
+TelegramJohnnysTraderBotApp.py
+johnnystraderapp.py
