Added Economic Times News Sentiment

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Camo.py
 NIFTY_Transformed_Single_File_2010_2019_back_to_back_contract_data.csv
 TelegramJohnnysTraderBotApp.py
 johnnystraderapp.py
+assets/chromedriver.exe
